--- a/app/src/main/res/layout/fragment_cb_locker.xml
+++ b/app/src/main/res/layout/fragment_cb_locker.xml
@@ -72,6 +72,14 @@
                     app:listener="@{listener.takeUrlKey}"
                     app:viewModel="@{viewModel.takeUrlKey}" />
 
+                <include
+                    layout="@layout/view_card_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:listener="@{listener.openForMaintenance}"
+                    app:viewModel="@{viewModel.openForMaintenance}" />
+
 
             </LinearLayout>
 
