--- a/app/src/main/res/layout/fragment_cb_locker.xml
+++ b/app/src/main/res/layout/fragment_cb_locker.xml
@@ -80,6 +80,14 @@
                     app:listener="@{listener.openForMaintenance}"
                     app:viewModel="@{viewModel.openForMaintenance}" />
 
+                <include
+                    layout="@layout/view_card_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:listener="@{listener.read}"
+                    app:viewModel="@{viewModel.read}" />
+
 
             </LinearLayout>
 
