--- a/app/src/main/res/layout/fragment_cb_locker.xml
+++ b/app/src/main/res/layout/fragment_cb_locker.xml
@@ -53,6 +53,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    app:listener="@{listener.scanWithSpacerId}"
+                    app:viewModel="@{viewModel.scanWithSpacerId}" />
+
+                <include
+                    layout="@layout/view_card_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     app:listener="@{listener.put}"
                     app:viewModel="@{viewModel.put}" />
 
