--- a/app/src/main/res/layout/fragment_cb_locker.xml
+++ b/app/src/main/res/layout/fragment_cb_locker.xml
@@ -77,6 +77,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    app:listener="@{listener.reservedOpen}"
+                    app:viewModel="@{viewModel.reservedOpen}" />
+
+                <include
+                    layout="@layout/view_card_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     app:listener="@{listener.takeUrlKey}"
                     app:viewModel="@{viewModel.takeUrlKey}" />
 
@@ -88,6 +96,13 @@
                     app:listener="@{listener.openForMaintenance}"
                     app:viewModel="@{viewModel.openForMaintenance}" />
 
+                <include
+                    layout="@layout/view_card_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:listener="@{listener.checkDoorStatus}"
+                    app:viewModel="@{viewModel.checkDoorStatus}" />
 
             </LinearLayout>
 
